# stg2

./: .gitignore  1.2.0  README.md  README_CN.md  check_syntax.py  requirements.txt  run_tests.bat
telemem-main/: .gitignore  PATCHES.md  README-ZH.md  README.md  pyproject.toml  requirements.txt
telemem-main/baselines/: evaluate.py
telemem-main/baselines/A-mem/: README.md  load_dataset.py  memory_layer.py  test_advanced.py
telemem-main/baselines/mem0/: .gitignore  LICENSE  README.md  __init__.py  add.py  check_think.py  local_adapter.py  mem0_manager.py  memory_manager_local.py  prompts.py  requirements.txt  run.py  search.py
telemem-main/baselines/memobase/: readme.md
telemem-main/baselines/memobase/locomo-benchmark/: Makefile  environment.yml  json_convert.py  prompts.py  run_experiments.py
telemem-main/baselines/memobase/locomo-benchmark/metrics/: llm_judge.py
telemem-main/baselines/memobase/src/server/: docker-compose.yml  readme.md
telemem-main/baselines/rag/: README.md  __init__.py  convert.py  rag_manager.py  run.py  run.sh
telemem-main/baselines/telemem/: EvalModel.py  README.md  config.yaml  eval.py  eval_score.py
telemem-main/config/: config.yaml
telemem-main/docs/: TeleMem-Overlay-ZH.md  TeleMem-Overlay.md
telemem-main/examples/: quickstart.py  quickstart_mm.py
telemem-main/overlay/patches/: add-TeleMemory.patch
telemem-main/scripts/: apply_patches.sh  init_upstream.sh  record_patch.sh  update_upstream.sh
telemem-main/telemem/: __init__.py  configs.py  main.py  mem0.py
telemem-main/tests/: README.md  test_basic.py  test_telemem.py
(+1916 files in other folders)
